--- a/web/index.html
+++ b/web/index.html
@@ -19,12 +19,12 @@
 
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-    <meta name="description" content="A new Flutter project.">
+    <meta name="description" content="Made-to-order and custom order furniture.">
 
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="quibrals_furniture">
+    <meta name="apple-mobile-web-app-title" content="Quibral's Furniture">
     <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
     <!-- Favicon -->
@@ -32,6 +32,8 @@
 
     <title>Quibral's Furniture</title>
     <link rel="manifest" href="manifest.json">
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=API_KEY"></script>
 
     <script>
         // The value below is injected by flutter build, do not touch.
