--- a/web/index.html
+++ b/web/index.html
@@ -33,7 +33,7 @@
     <title>Quibral's Furniture</title>
     <link rel="manifest" href="manifest.json">
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=API_KEY"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=API_KEY"></script> -->
 
     <script>
         // The value below is injected by flutter build, do not touch.
